# AstroHelper

./: AstroHelper.ipynb  FLOWCHART.pptx  IC.txt  LICENSE.md  Messier.txt  NGC.txt  Objekt_Helfer(1).ipynb  Objekt_Helfer.ipynb  README.md  Test1.ipynb  example.py  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
astrohelper/: functions.py
lib/: functions.py
tests/: test_functions.py
