[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroHelper"
version = "0.1.0"
description = "A Python package helping with astronomical observations"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name="Justus Sponbrucker", email="justus.sponbrucker@fau.de" }, { name="Dorian Pejic", email="dorian.pejic@fau.de" }
]
dependencies = [
  "numpy",
  "astropy",
  "astroquery",
  "astroplan",
  "cartopy",
  "timedelta",
  "matplotlib",
  "scipy",
  "pytz",
  "warnings",
]

[project.urls]
"Homepage" = "https://github.com/DP0604/AstroObjectHelperPipeline"